<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">yohee</string>
    <string name="setting_no">Empty</string>
    <string name="setting_theme_spring">Spring flower</string>
    <string name="setting_theme_summer">Summer sun</string>
    <string name="setting_theme_autunm">Autumn leaf</string>
    <string name="setting_theme_winter">Winter wind</string>
    <string name="setting_theme_switch">Follow seasons</string>
    <string name="anim_mark_fade">Color gradient</string>
    <string name="anim_mark_trans">Position swing</string>
    <string name="setting_txt_0">Oversized</string>
    <string name="setting_txt_1">Large</string>
    <string name="setting_txt_2">Medium</string>
    <string name="setting_txt_3">Normal</string>
    <string name="setting_txt_4">Small</string>
    <string name="setting_hand_left">Left hand habit</string>
    <string name="setting_hand_right">Right hand habit</string>
    <string name="setting_rotate_0">Lock vertical</string>
    <string name="setting_rotate_1">Lock horizontal</string>
    <string name="setting_rotate_2">Follow system</string>
    <string name="about_soft">Software About:</string>
    <string name="about_safe">Safety About:</string>
    <string name="about_understand">Our promise:</string>
    <string name="about_soft_sware">\t\t\t\tDo not add splash page, no push, no advertising of any kind, if there is any function that hinders the user, please contact us to solve.</string>
    <string name="about_safe_sware">\t\t\t\tYohee As a browsing tool, the software does not collect any user information.</string>
    <string name="about_understand_sware">\t\t\t\tYohee is committed to being the easiest and most convenient browser to continuously explore new features and implementations that meet user habits. Please pay attention to us.</string>
    <string name="help_sina">Weibo</string>
    <string name="help_qq_copy">Copy QQ number</string>
    <string name="help_qq_jump">Jump to QQ</string>
    <string name="setting_screen_rotate">Rotating screen</string>
    <string name="setting_hoby">Custom setting</string>
    <string name="setting_browser">Browser settings</string>
    <string name="app_data_keep">Application data backup</string>
    <string name="setting_detfault">Set default</string>
    <string name="setting_help">Help and feedback</string>
    <string name="setting_score">Give a comment</string>
    <string name="open_app_fail">Operation failed. Please check if app installed.</string>
    <string name="default_clear_tip">There exist other default settings, please clear it first!</string>
    <string name="edit_tip">Long press and drag to sort!</string>
    <string name="goto_clear">Clear now</string>
    <string name="goto_setting">Set up now</string>
    <string name="setting_success">Successful setup</string>
    <string name="resort_success">Sorted successfully</string>
    <string name="action_complete">complete</string>
    <string name="action_select_all">select all</string>
    <string name="detail_info">Details</string>
    <string name="update_check">Check for updating</string>
    <string name="app_share">Share this browser</string>
    <string name="rename">Rename</string>
    <string name="action_add_pagemark">Add label</string>
    <string name="bookmark_or_history">Bookmark/History</string>
    <string name="block_image_wap">No picture at mobile network</string>
    <string name="block_image_all">No picture at all</string>
    <string name="save_page">Save offline</string>
    <string name="offpage">Offline pages</string>
    <string name="offpage_where_tip">You can access it via (Menu - Offline)</string>
    <string name="tip_success">Success</string>
    <string name="tip_fail">Fail</string>
    <string name="media_find">Video radar</string>
    <string name="common_mark">Common labels</string>
    <string name="dynamic_bg">Dynamic background</string>
    <string name="error_tip_download">This page does not support local storage</string>
    <string name="block_ads_manage">Ad list</string>
    <string name="alert_warm">Warning</string>
    <string name="page_home">Home</string>
    <string name="alert_clear_all">Confirm to delete?</string>
    <string name="download_aready_exist">File already exists</string>
    <string name="goto_media_tip">Video radar sniffing is not currently enabled. Please enable it in the settings.</string>
    <string name="auto_restore_webs">Automatically recover lost pages</string>
    <string name="web_color_follow">Immersive navigation bar</string>
    <string name="web_fix_toolbar">Fixed navigation bar</string>
    <string name="web_restore_tip">Webpage was closed abnormally last time, restore them?</string>
    <string name="web_restore">Restore</string>
    <string name="media_list_title">Radar list</string>
    <string name="auto_pop_video_detect">Video radar detection</string>
    <string name="ssl_error_shake">SSL certificate exception reminder</string>
    <string name="anim_home_marks">Home labels animation</string>
    <string name="action_close">Close</string>
    <string name="ad_block_desc">It will automatically filter out webpage ads.</string>
    <string name="copyed_to_clip">Copied: %1$s</string>
    <string name="bookmark">Bookmark</string>
    <string name="copy2disk">Backup</string>
    <string name="onekey_copy2disk">One-key backup</string>
    <string name="please_choice_first">Please select the item first.</string>
    <string name="import_save2disk">Import backup</string>
    <string name="data_copy_save_tip">Data backup is completed, click to share to others</string>
    <string name="share_file">Share this file</string>
    <string name="restore_copyed_data">The backup data will be merged with the application data. Confirm the operation?</string>
    <string name="setting_import_tip">Backup data detected, imported?</string>
    <string name="first_import_tip">For the first time installation, the recommended label has been automatically loaded!</string>
    <string name="file_format_error">Please confirm the configuration is shared from other devices.</string>
    <string name="will_exit_tip">Click again to finish</string>
    <string name="setting_import">Settings loaded</string>
    <string name="exist_download">File already exists</string>
    <string name="paused">Time out</string>
    <string name="download_fail">Download failed, please try again</string>
    <string name="remove_love">Remove collection</string>
    <string name="downloading_info">Downloading: %s</string>
    <string name="downloading_back">downloading continue in the background…</string>
    <string name="share_from">yohee browser</string>
    <string name="download_list">Download list</string>
    <string name="download_onlywifi_pause">For the data network now, downloads have been suspended.</string>
    <string name="download_onlywifi_resume">Downloads has been restored.</string>
    <string name="download_only_wifi">Download only in wifi environment</string>
    <string name="data_net_tip">Now is data network, do you download files?</string>
    <string name="action_share_pic">Screenshot sharing</string>
    <string name="is_stopping">Stopping…</string>
    <string name="confirm">Confirm</string>
    <string name="message_blocked_local">Local file has been blocked, sure to load?</string>
    <string name="action_add_download">New download</string>
    <string name="url_invalide">Invalid url</string>
    <string name="unkown">Unknown</string>
    <string name="download_inqueue">Waiting for download</string>
    <string name="type">Type</string>
    <string name="size">Size</string>
    <string name="date">Date</string>
    <string name="link_url">Link</string>
    <string name="video">Video</string>
    <string name="image">Image</string>
    <string name="file_pdf">Pdf document</string>
    <string name="file_apk">Android apk</string>
    <string name="file">File</string>
    <string name="protol_serve">"User Services Agreement"</string>
    <string name="share_tip">Say your words</string>
    <string name="baidu_tip">Due to some search engine bidding rankings, the results may not be true, be careful the search result!</string>
    <string name="danger_tip">Detected vocabulary ["%1$s"], %2$s</string>
    <string name="action_night">Night</string>
    <string name="action_fresh">Fresh</string>
    <string name="action_tool">ToolBox</string>
    <string name="search_engine_sogou">Sogou</string>
    <string name="help_twitter">Twitter</string>
    <string name="help_email">Email</string>
    <string name="help_qq">QQ</string>
    <string name="bookmark_edit_item">Edit item</string>
    <string name="bookmark_edit_all">Edit all</string>
    <string name="download_progress">Downloading:%s</string>
    <string name="download_length">Downloaded:%s</string>
    <string name="download_trickter">You have a new notice</string>
    <string name="download_click_open">Tap to continue</string>
    <string name="action_new_tab">New tab</string>
    <string name="action_share">Share</string>
    <string name="action_history">History</string>
    <string name="action_downloads">Downloads</string>
    <string name="action_add_bookmark">Add bookmark</string>
    <string name="settings">Settings</string>
    <string name="location">Location access</string>
    <string name="password">Save your passwords</string>
    <string name="fullscreen">Full-screen mode</string>
    <string name="cache">Clear cache on exit</string>
    <string name="block">Block images</string>
    <string name="search_hint">Search</string>
    <string name="clear_cookies">Clear cookies</string>
    <string name="clear_history">Clear history</string>
    <string name="action_open">Open</string>
    <string name="share_url">Share this page</string>
    <string name="action_delete">Delete</string>
    <string name="title_search_engine">Search engine</string>
    <string name="action_ok">OK</string>
    <string name="dialog_download">Do you want to download this file? (%1$s)</string>
    <string name="unknown_size">Unknown size</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_clear_cookies">Clear cookies</string>
    <string name="dialog_cookies">Clear all browser cookies?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="title_text_size">Text size</string>
    <string name="hint_title">Title</string>
    <string name="hint_url">URL</string>
    <string name="action_edit">Edit</string>
    <string name="action_back">Back</string>
    <string name="action_find">Find in page</string>
    <string name="download_start">Start downloading:</string>
    <string name="download_no_sdcard_dlg_title">No SD card</string>
    <string name="download_no_sdcard_dlg_msg">Storage is required to download the file.</string>
    <string name="download_sdcard_busy_dlg_title">Storage unavailable</string>
    <string name="dialog_open_new_tab">Open in new tab</string>
    <string name="dialog_open_background_tab">Open in background tab</string>
    <string name="dialog_remove_from_history">Remove from history</string>
    <string name="dialog_copy_link">Copy link</string>
    <string name="privacy_content1"> Please read carefully and fully understand the terms of the "Service Agreement" and "Privacy Policy", including but not limited to: in order to provide you with services such as file downloading and content sharing, we need to collect your Device Information. You can view, change, delete personal information and manage your authorization in "Settings-About". </string>
    <string name="privacy_content2"> You can read </string>
    <string name="privacy_content3"> Learn more. If you agree, please click "Agree" to start accepting our services. </string>
    <string name="privacy_secure"> Privacy Policy </string>
</resources>