<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mm_bookmark"
        android:icon="@drawable/ic_book"
        android:title="@string/bookmark_or_history"/>
    <item
        android:id="@+id/mm_imageblock"
        android:icon="@drawable/ic_no_image"
        android:title="@string/block"/>
    <item
        android:id="@+id/mm_downlaod"
        android:icon="@drawable/ic_download"
        android:title="@string/action_downloads"/>
    <item
        android:id="@+id/mm_night"
        android:icon="@drawable/ic_night"
        android:title="@string/action_night"/>
    <item
        android:id="@+id/mm_fresh"
        android:icon="@drawable/ic_fresh"
        android:title="@string/action_fresh"/>
    <item
        android:id="@+id/mm_addbookmark"
        android:icon="@mipmap/ic_bookmark_add"
        android:title="@string/action_add_bookmark"/>
    <item
        android:id="@+id/mm_share"
        android:icon="@drawable/ic_share"
        android:title="@string/action_share"/>
    <item
        android:id="@+id/mm_full_screen"
        android:icon="@drawable/ic_fullscreen"
        android:title="@string/fullscreen"/>
    <item
        android:id="@+id/mm_toolbox"
        android:icon="@drawable/ic_toolbox"
        android:title="@string/action_tool"/>
    <item
        android:id="@+id/mm_settings"
        android:icon="@drawable/ic_setting"
        android:title="@string/settings"/>
</menu>