<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_history_new_tab"
        android:title="@string/dialog_open_new_tab"/>
    <item
        android:id="@+id/menu_history_new_bgtab"
        android:title="@string/dialog_open_background_tab"/>
    <item
        android:id="@+id/menu_history_share"
        android:title="@string/action_share"/>
    <item
        android:id="@+id/menu_history_copy_link"
        android:title="@string/dialog_copy_link"/>
    <item
        android:id="@+id/menu_history_refresh"
        android:title="@string/action_fresh"/>
    <item
        android:id="@+id/menu_history_rm"
        android:title="@string/dialog_remove_from_history"/>
    <item
        android:id="@+id/menu_history_clear"
        android:title="@string/clear_history"/>
</menu>