<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rain_station_list"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_content1"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_content2"/>
        <TextView
            android:id="@+id/goto_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/default_blue"
            android:text="@string/protol_serve"/>
        <TextView
            android:layout_marginLeft="5dp"
            android:id="@+id/goto_secure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/default_blue"
            android:text="@string/privacy_secure"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_content3"/>
</LinearLayout>