<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#EFEFEF"
              android:fitsSystemWindows="true"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/txt_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:drawableStart="@mipmap/ic_launcher"
        android:gravity="center"
        android:text="Yohee: 1.0.0"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/about_soft"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_soft_sware"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/about_safe"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_safe_sware"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/about_understand"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_understand_sware"
            android:textSize="12sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/update_check"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/trans_list_item_style"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/update_check"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/app_share"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/trans_list_item_style"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/app_share"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:orientation="vertical"
        android:padding="15dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/protol_serve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protol_serve"
                android:autoLink="all"
                android:textColor="@color/default_blue"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" | "
                android:textColor="@color/default_blue"/>
            <TextView
                android:id="@+id/protol_secure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_secure"
                android:autoLink="all"
                android:textColor="@color/default_blue"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Copyright © 2019 Yohee. All Right Reserved"/>
    </LinearLayout>
</LinearLayout>
