<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="@dimen/menubar_height"
              android:orientation="horizontal">

    <TextView
        android:id="@+id/txt_back"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/gray_border"
        android:gravity="center"
        android:scaleType="center"
        android:text="@string/action_back"/>
    <TextView
        android:id="@+id/txt_delete"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/gray_border"
        android:gravity="center"
        android:scaleType="center"
        android:text="@string/action_delete"/>

    <TextView
        android:id="@+id/txt_menu"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/gray_border"
        android:gravity="center"
        android:scaleType="center"
        android:text="@string/settings"/>
</LinearLayout>