<?xml version="1.0" encoding="utf-8"?>
<com.github.clans.fab.FloatingActionMenu android:id="@+id/float_menu_up"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="6dp"
    app:menu_fab_size="mini"
    app:menu_labels_ellipsize="end"
    app:menu_labels_singleLine="true"
    app:menu_openDirection="up">

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/float_action_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_share"
        app:fab_label="@string/action_share"
        app:fab_size="mini" />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/float_action_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_find"
        app:fab_label="@string/action_find"
        app:fab_size="mini" />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/float_action_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_screen_rotate"
        app:fab_label="@string/setting_screen_rotate"
        app:fab_size="mini" />
</com.github.clans.fab.FloatingActionMenu>